# Auto_Church

./: Cargo.toml  README.md  church-account-state-v1.aln
aln/: compliance_policy.aln
auto_church/ecofairness_guardian/: Cargo.toml
church-of-fear-neuromorph-core/src/: lib.rs
church_of_fear_ledger/src/: deed.rs  lib.rs  sponsor.rs  validator.rs
crates/Church-of-FEAR/: Cargo.toml  README.md
crates/Church-of-FEAR/aln/: eco_governance.aln
crates/Church-of-FEAR/src/: lib.rs
crates/Church-of-FEAR/src/compliance/: ethics.rs  validator.rs
crates/Church-of-FEAR/src/ledger/: balance.rs  metrics.rs  mod.rs
crates/Church-of-FEAR/src/rpc/: server.rs
crates/Church-of-FEAR/src/sponsor/: mod.rs
crates/Church-of-FEAR/src/token/: burn.rs
crates/Church-of-FEAR/src/utils/: logging.rs  mod.rs  time.rs
crates/Church-of-FEAR/tests/: compliance_tests.rs  ledger_tests.rs
crates/ac_aln_integration/: Cargo.toml
crates/ac_aln_integration/src/: aln_integration.rs  codex_branch.rs  lib.rs
crates/ac_aln_rt/: Cargo.toml
crates/ac_aln_rt/src/: exec.rs  lib.rs
crates/ac_git_orchestrator/: Cargo.toml
crates/ac_git_orchestrator/src/: actions.rs  lib.rs  session_store.rs
crates/ac_identity_lineage/src/: error.rs  lineage.rs  pattern.rs
crates/ac_observability/: Cargo.toml
crates/ac_observability/src/: event.rs
crates/ac_scheduler_runtime/src/: scheduler.rs  worker.rs
crates/ac_topology_model/: Cargo.toml
crates/ac_topology_model/src/: branch.rs  cluster.rs  lib.rs  node.rs
crates/augmented-citizen-sovereignty-core/src/: reputation.rs
crates/church-ledger/: Cargo.toml
crates/church-ledger/src/: deedevent.rs
crates/eco-fairness-guard/src/: lib.rs
crates/ecofairness-guard/src/: lib.rs
crates/ecofairness-guard/tests/: check_equity_fuzz.rs  eco_fairness_invariants.rs
crates/fear_spiderweb_ledger/: Cargo.toml
crates/fear_spiderweb_ledger/src/: deed.rs
crates/identity/neuro_eco_manifest/: Cargo.toml
crates/identity/neuro_eco_manifest/examples/: phoenix_demo.rs
crates/identity/neuro_eco_manifest/src/: main.rs
crates/microspace-rights-observer/: Cargo.toml
crates/microspace-rights-observer/src/: lib.rs
docs/: Spiderweb-of-Fear.md  The_Auto_Church_Altar.md
qpudata/shards/: church-of-fear-neuromorph-consent-profile.aln
src/: main.rs
src/kernel/: reversal_protection_kernel.rs
src/utils/: crypto.rs  time.rs
