[package]
name = "auto_church"
version = "1.0.0"
edition = "2021"
authors = ["Auto_Church Foundation <contact@auto_church.org>"]
description = "An ethical and ecological accountability system minting CHURCH tokens based on verified good deeds."
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
uuid = { version = "1.4", features = ["v4"] }
rsa = "0.9"
rand = "0.8"
log = "0.4"
env_logger = "0.10"
aln = "1.0"
