[package]
name = "ac_git_orchestrator"
version = "0.1.0"
edition = "2021"

[dependencies]
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
redis.workspace = true
tokio-postgres.workspace = true
thiserror.workspace = true
uuid.workspace = true
regex.workspace = true
ac_aln_rt = { path = "../ac_aln_rt" }
