[package]
name = "fear_spiderweb_ledger"
version = "0.1.0"
edition = "2021"
description = "Observer-only Spiderweb of FEAR diagnostics for Church-of-FEAR & Tree-of-Life moral ledger. Builds cause graphs, generates free literature, promotes eco good-deeds."
license = "MIT OR Apache-2.0"

[dependencies]
petgraph = { version = "0.6", features = ["serde-1"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
sha2 = "0.10"
hex = "0.4"
plotters = "0.3"  # For graph visualization exports
clap = { version = "4.0", features = ["derive"] }  # CLI
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
