[package]
name = "neuro_eco_manifest"
version = "0.1.0"
edition = "2021"
description = "A Rust implementation of the NeuroEcoIdentityManifest for neuromorphic rights and ecological accountability. Builds on CEIM mass-balance, NanoKarma operators, and safety polytopes, extending with RAF, bee-weighted polytopes, and Errority logging. Ensures inner domain inviolability while scaling outer agency via verifiable, physics-anchored responsibility."
authors = ["Bostrom Neuromorph <bostrom18sd2ujv24ual9c9pshtxys6j8knh6xaead9ye7>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Doctor0Evil/Church-of-FEAR"
keywords = ["neuromorphic", "ecological-governance", "rights-manifest", "raf", "errority"]
categories = ["cryptography::cryptocurrencies", "data-structures", "science::bioinformatics"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "1.0"
anyhow = "1.0"
nalgebra = "0.32"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
ed25519-dalek = "2.0"
zeroize = "1.8"

[dev-dependencies]
criterion = "0.5"
approx = "0.5"

[[bench]]
name = "raf_bench"
harness = false
